# flow_search

./: .gitignore  README.docx  README.md  agent.py  generate_doc.py  main.py  pyproject.toml  resultados_enriquecidos.json  resultados_preliminares.json  run_enrichment.py  test_streaming.py
chains/: deep_dive_agent.py  extractor_agent.py  query_generator.py  research_agent.py  scrutinizer_agent.py
config/: settings.py
frontend/: index.html  project.html
frontend/css/: style.css
frontend/js/: app.js  workflow.js
images/: CotecmarLogo.svg.url  CotecmarLogo_white.svg.url
schemas/: models.py
src/components/: enricher.py  extractor.py  query_generator.py  researcher.py  scrutinizer.py
src/config/: settings.py
src/pipelines/: discovery.py  enrichment.py  full_agent.py
src/schemas/: models.py
src/utils/: normalizers.py
utils/: normalizers.py
