[project]
name = "flow-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.7",
    "tavily-python>=0.7.12",
]
